0.06
 - Move dt_created() to Data::Image.
 - Update copyright years.
 - Update Module::Install to 1.21 version.
 - Update README file.

0.05 2022-10-16T18:31:53+02:00
 - Add page_id parameter.
 - Fix brackets in code.

0.04 2022-10-16T17:12:12+02:00
 - Add license parameter.

0.03 2022-10-13T11:19:30+02:00
 - Fix repository typo.

0.02 2022-10-12T00:50:35+02:00
 - Fix test dependencies (missing DateTime).

0.01 2022-10-11T21:13:02+02:00
 - First version.