@@ -3,7 +3,6 @@ TODO
 1. More data object for Wikimedia Commons or only image?
 2. Inherit some common data object and in this focus to Wikimedia Commons.
 Add some other Wikimedia Commons information like uploader.
-4. Add ERRORS section to doc.
 6.
 
 Applied
@@ -12,4 +11,7 @@ Applied
 OK [20221006] skim
 
 5. Move dt_created to Data::Image. Not related to Wikimedia Commons.
+OK [20230623] skim
+
+4. Add ERRORS section to doc.
 OK [20230623] skim
